# hibiki

./: .gitignore  CONTRIBUTING.md  README.md  audio_api.py  pyproject.toml
.github/workflows/: rust-ci.yml
hibiki/: __init__.py
hibiki-rs/: Cargo.toml  README.md
hibiki-rs/src/: audio_io.rs  gen.rs  lib.rs  main.rs  server.rs
