[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Hibiki, a real-time speech-to-speech translation"
repository = "https://github.com/kyutai-labs/hibiki"
keywords = ["machine-learning", "audio"]
categories = ["science"]


[dependencies]
anyhow = "1.0"
candle = { version = "0.8.2", package = "candle-core" }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
clap = { version = "4.2.4", features = ["derive"] }
moshi = "0.5.0"
rubato = "0.15.0"
sentencepiece = "0.11.2"
symphonia = { version = "0.5.3", features = ["all"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
