[package]
name = "hibiki"
version = "0.1.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Hibiki, a real-time speech-to-speech translation model"
repository = "https://github.com/kyutai-labs/hibiki"
keywords = ["machine-learning", "audio"]
categories = ["science"]


[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
candle = { version = "0.8.2", package = "candle-core" }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
moshi = "0.5.2"
rubato = "0.15.0"
sentencepiece = "0.11.2"
serde = { version = "1.0.171", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
websockets = "0.5"

[features]
default = []
cuda = ["moshi/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["moshi/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
